feat: improved deluxemenu importer